2006-01-17  Mats Cronqvist  <locmacr@mwlx084>

	* gperfConsumer.erl (Module):  cpu load now shows beam, user, kernel, io
	* gperfGtk.erl (Module): in blue,red,green,magenta

2006-01-16  Mats Cronqvist  <locmacr@mwlx084>

	* gperf (Module): -dbg flag

2005-12-08  Mats Cronqvist  <locmacr@mwlx084>

	* gperfGtk.erl (Module): sorts plotted values such that biggest
	value gets plotted first etc. means all colors are always visible.

2005-12-02  Mats Cronqvist  <locmacr@mwlx084>

	* gperf (Module): 
	* gperf.erl (Module): fixed start script (again)

2005-12-01  Mats Cronqvist  <locmacr@mwlx084>

	* gperf (Module): bugfix

	* gperfConsumer.erl (Module): changed hardcoded :< netload Y-axis
